# plenty

./: AGENTS.md  BACKLOG.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
examples/: filter_m.plenty
runtime/: plenty_runtime.c
src/: codegen.rs  lexer.rs  lib.rs  main.rs  op.rs  value.rs  vm.rs
tests/: test_aot.rs  test_basic.rs  test_control_flow.rs  test_file_mode.rs  tutorial.rs
